--- a/changeItUp.html
+++ b/changeItUp.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css/family=Lobster|Open+Sans"/>
-    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/changeItUp.css"/>
 
     <title>NuCamp: A Better Way To Camp</title>
 </head>
@@ -29,66 +29,11 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col col-md-4 col-xl-2 m-t-4">
-                    <a href="#reserveModal" type="button" class="btn btn-large btn-info" data-toggle="modal">Reserve Campsite</a>
+                    <a href="#reserveForm" type="button" class="btn btn-large btn-secondary" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /><strong>1-206-555-1234</strong">Reserve Campsite</a>
                 </div>
             </div>    
         </div>
     </header>
-
-    <div id="reserveModal" class="modal fade" role="dialog">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header bg-info text-white">
-                    <h3 class="modal-title">Reserve a Campsite</h3>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <div class="container-fluid">
-                        <form>
-                            <div class="row">
-                                <label class="col-form-label col-sm-6">Number of Campers</label>
-                                    <div class="col col-xs-4">
-                                        <select class="form-control" name="numCampers" id="numCampers">
-                                            <option>Select</option>
-                                            <option>1</option>
-                                            <option>2</option>
-                                            <option>3</option>
-                                            <option>4</option>
-                                            <option>5</option>
-                                            <option>6</option>
-                                        </select>
-                                    </div>
-                            </div>                               
-                            <div class="row form-group">
-                                <label class="col-sm-6" for="date">Date</label>
-                                <div class="col-sm-6">
-                                    <input class="form-control" type="date" id="type" name="date" placeholder="">
-                                </div>
-                            </div>
-                            <div class="row form-group">
-                                <label class="col-sm-6 col-form-label">Campsite Type</label>
-                                <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons"></div>
-                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                                    <label class="btn btn-success active">
-                                      <input type="radio" name="siteType" id="siteTent" value="tent" autocomplete="off" checked> Tent
-                                    </label>
-                                    <label class="btn btn-primary">
-                                      <input type="radio" name="siteType" id="siteRV" value="RV"  autocomplete="off"> RV
-                                    </label>
-                                  </div>                                   
-                            </div>
-                            <div class="row">
-                                <div class="col col-xs-4">
-                                    <button type="submit" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                    <button type="submit" class="btn btn-primary ">Search</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>             
 
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
@@ -150,6 +95,7 @@
     </nav>
 
     <div class="container">
+
         <div class="row row-content">
             <div class="col-md-8 mx-auto">
                 <div id="homeCarousel" class="carousel slide" data-ride="carousel">
@@ -210,6 +156,8 @@
             </div>
         </div>
     
+
+
         <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3">
                 <h2>Featured Campsites</h2>
@@ -240,8 +188,44 @@
                 </div>
             </div>
         </div>
+        <div class="row row-content"> 
+            <div class="col mx-auto">
+                <div class="card">
+                    <h3 class="card-header bg-info">Reserve a Campsite</h3>
+                        <div class="card-body bg-dark">
+                            <form id="reserveForm">
+                                <div class="row">
+                                    <label class="col-form-label col-sm-6">Number of Campers</label>
+                                        <div class="col col-xs-4">
+                                            <select class="form-control" name="numCampers" id="numCampers">
+                                                <option>Select</option>
+                                                <option>1</option>
+                                                <option>2</option>
+                                                <option>3</option>
+                                                <option>4</option>
+                                                <option>5</option>
+                                                <option>6</option>
+                                            </select>
+                                        </div>
+                                </div>                               
+                                <div class="row">
+                                    <label class="col-sm-6" for="date">Date</label>
+                                    <div class="col-sm-6">
+                                        <input class="form-control" type="date" id="type" name="date" placeholder="">
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col col-xs-4">
+                                        <button type="submit" class="btn btn-primary ">Search</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                </div>
+            </div>
+        </div>    
+    
     </div>
-
     <footer class="site-footer">
         <div class="container">
             <div class="row">
@@ -271,6 +255,7 @@
 
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <script>
