--- a/index.html
+++ b/index.html
@@ -196,18 +196,18 @@
 
 
         <div class="row row-content align-items-center">
-                <div class="col-sm-4 order-sm-last col-md-3">
-                    <h2 class="text-sm-right">Discover & Review</h2>
-                </div>   
+            <div class="col-sm-4 order-sm-last col-md-3">
+                <h2 class="text-sm-right">Discover & Review</h2>
+            </div>   
                 <div class="col">
                     <div class="media">
                         <img class="d-flex mr-3 img-thumbnail" src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb-trail" />
                         <div class="media-body align-self-center">
-                    <h3>Our Campsites</h3>
-                    <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
+                            <h3>Our Campsites</h3>
+                            <p>Explore our growing database of curated campsites and leave your own reviews!</p>
+                        </div>
                     </div>
                 </div>
-            </div>
         </div>
     
         <div class="row row-content align-items-center">
