--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css/family=Lobster|Open+Sans"/>
     <link rel="stylesheet" href="css/styles.css"/>
-
-    <title>NuCamp: A Better Way To Camp</title>
 </head>
 
 <body>
@@ -190,6 +188,14 @@
                         <span class="carousel-control-next-icon"></span>
                         <span class="sr-only">Next</span>
                     </a>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carouselPlay">
+                            <i class="fa fa-play"></i>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carouselPause">
+                            <i class="fa fa-pause"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -272,11 +278,16 @@
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
     <script>
-        $(function () {
-            $(`[data-toggle="tooltip"]`).tooltip()
-        })
+        $(function() {
+            $(".carousel").carousel( { interval: 2000 } );
+            $("#carouselPause").click(function(){
+                $(".carousel").carousel("pause");
+            });
+            $("#carouselPlay").click(function(){
+                $(".carousel").carousel("cycle");
+            });
+        });
     </script>
 
 </body>
