--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <!-- endbuild -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+
 </head>
 
 <body>
@@ -28,7 +29,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col col-md-4 col-xl-2 m-t-4">
-                    <a href="#reserveModal" type="button" class="btn btn-large btn-info" data-toggle="modal">Reserve Campsite</a>
+                    <a id="reserveButton" type="button" class="btn btn-large btn-info" >Reserve Campsite</a>
                 </div>
             </div>    
         </div>
@@ -37,7 +38,7 @@
     <div id="reserveModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
-                <div class="modal-header bg-info text-white">
+                <div class="modal-header">
                     <h3 class="modal-title">Reserve a Campsite</h3>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
@@ -93,7 +94,7 @@
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="30" /></a>
-            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="nucampNavBar">
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" id="logInButton">
                 <span class="navbar-toggler-icon"></span>
             </button>
         <div class="collapse navbar-collapse id="nucampNavBar">
@@ -110,6 +111,7 @@
                 </a>
             </span>
         </div>
+    </nav>
     <!--Modals-->
     <div id="loginModal" class="modal fade" role="dialog">
         <div class="modal-dialog" role="document">
@@ -145,9 +147,9 @@
                     </div>
                 </div>
             </div>
-        </div>             
-    </nav>
-
+        </div>
+    </div>            
+    
     <div class="container">
         <div class="row row-content">
             <div class="col-md-8 mx-auto">
